your commit message

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
           <div class="description">
             <h5>Description:</h5>
             <p>My name is Anas Mohammed Al Shanti and I am 18 years old
-                I finished school with a GPA of 83.4 and I was hoping to enter an engineering college</p>
+                I finished school was hoping to enter an engineering college</p>
             <div class="tech-stack">
                 <iconify-icon icon="vscode-icons:file-type-reactjs" width="38" height="38"></iconify-icon>
                 <iconify-icon icon="vscode-icons:file-type-html" width="38" height="38"></iconify-icon>
